--- a/home/templates/form.html
+++ b/home/templates/form.html
@@ -9,16 +9,14 @@
   <body>
 
     <form action="" method="post" enctype="multipart/form-data">
-        {%load crispy_forms_tags %} 
+        {% load crispy_forms_tags %} 
         {% csrf_token %}
         {{ form | crispy }}
 
-        <button type="submit"  class="btn btn-primary">Save</button>
+        <button type="submit"  class="btn btn-success">Save</button>
 
     </form>
 
-    
-    <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
