--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -3,11 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Management</title>
+
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
+    <header>
+        <nav class="bg-gray-800 p-4 ">
+            <ul class="flex justify-between mx-5">
+                <li>
+                    <a href="{% url 'home' %}" class="text-white text-xl">Home</a>
+                </li>
+                <li>
+                    <a href="#" class="bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">Add Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
+    <main class="bg-gray-700 mx-auto text-white border border-green-800">
+        <div class="container mx-auto " style="width: 96vw;">
+            <h1 class="text-3xl text-center text-bold m-5">My Contact List</h1>
 
-    <h1>That means the project runs properly</h1>
+            <div class="mt-5 card border">
+                <div class="card-header">
+                    <h2 class="text-2xl">Add Contact</h2>
+                </div>
+                <div class="card-body">
+                    <form action="" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="mb-4">
+                            <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                            <input type="text" name="name" id="name" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                            <input type="email" name="email" id="email" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="phone" class="block text-sm font-medium text-gray-700">Phone</label>
+                            <input type="text" name="phone" id="phone" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="image" class="block text-sm font-medium text-gray-700">Image</label>
+                            <input type="file" name="image" id="image" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
+                        </div>
+                        <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Save</button>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
