--- a/home/templates/form.html
+++ b/home/templates/form.html
@@ -1,22 +1,55 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
 
-    <form action="" method="post" enctype="multipart/form-data">
-        {% load crispy_forms_tags %} 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+  <link rel="stylesheet" href="{% static 'css/form.css' %}">
+</head>
+
+<body>
+
+  <header>
+    <nav class="bg-gray-800 p-4 ">
+      <ul class="d-flex justify-content-between mx-5">
+        <li>
+          <a href="{% url 'home' %}" class="text-white text-xl">Home</a>
+        </li>
+        <li>
+          <a href="{% url 'contact' %}" class="bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">Add
+            Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="bg-gray-700 mx-auto text-white">
+    <div class="container mx-auto " style="width: 96vw;">
+
+      <h1 class="text-center pt-3">Add a new contact</h1>
+      <form action="" method="post" enctype="multipart/form-data" class="m-5 p-5">
+        {% load crispy_forms_tags %}
         {% csrf_token %}
         {{ form | crispy }}
 
-        <button type="submit"  class="btn btn-success">Save</button>
+        <button type="submit" class="mt-3 bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">
+          Save
+        </button>
+      </form>
+    </div>
 
-    </form>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
 </html>
