--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,12 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Management</title>
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
 </head>
+
 <body>
     <header>
         <nav class="bg-gray-800 p-4 ">
@@ -15,45 +20,44 @@
                     <a href="{% url 'home' %}" class="text-white text-xl">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">Add Contact</a>
+                    <a href="{% url 'contact' %}"
+                        class="bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">Add
+                        Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main class="bg-gray-700 mx-auto text-white border border-green-800">
+    <main class="bg-gray-700 mx-auto text-white">
         <div class="container mx-auto " style="width: 96vw;">
-            <h1 class="text-3xl text-center text-bold m-5">My Contact List</h1>
+            <h1 class="text-3xl text-center text-bold p-5">My Contact List</h1>
 
-            <div class="mt-5 card border">
-                <div class="card-header">
-                    <h2 class="text-2xl">Add Contact</h2>
+            <div class="grid grid-cols-4 gap-6 p-6 row ">
+
+                {% for user in users %}
+                <div
+                    class="bg-gray-600 shadow-lg rounded-2xl overflow-hidden p-4 text-white card_list col col-sm-12 col-md-4 col-lg-3">
+                    <img class="w-full rounded-lg" src="{{user.image.url}}" alt="Contact Image">
+                    <h2 class="font-bold text-xl mt-2">Name : {{ user.name }}</h2>
+                    <p class=" text-sm">Email : {{ user.email }}</p>
+                    <p class=" text-sm">Phone : {{ user.phone }}</p>
+                    <p class=" text-sm">Company : {{ user.title }}</p>
+                    <button class="mt-3 bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg mx-2">
+                        <a href="{% url 'update' id=user.id %}">Update</a>
+                    </button>
+                    <button class="mt-3 bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg ms-2">
+                        <a href="{% url 'delete' id=user.id %}">Delete</a>
+                    </button>
                 </div>
-                <div class="card-body">
-                    <form action="" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="mb-4">
-                            <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                            <input type="text" name="name" id="name" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
-                        </div>
-                        <div class="mb-4">
-                            <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                            <input type="email" name="email" id="email" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
-                        </div>
-                        <div class="mb-4">
-                            <label for="phone" class="block text-sm font-medium text-gray-700">Phone</label>
-                            <input type="text" name="phone" id="phone" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
-                        </div>
-                        <div class="mb-4">
-                            <label for="image" class="block text-sm font-medium text-gray-700">Image</label>
-                            <input type="file" name="image" id="image" class="form-input rounded-md shadow-sm mt-1 block w-full" required>
-                        </div>
-                        <button type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Save</button>
-                    </form>
-                </div>
+                {% endfor %}
             </div>
 
         </div>
+
+        {% if edit %}
+        <h1 class="text-3xl text-center text-bold p-5">Update Contact</h1>
+        {% endif %}
     </main>
 </body>
+
 </html>
